--- a/egm_streamer/web/index.html
+++ b/egm_streamer/web/index.html
@@ -118,7 +118,7 @@
             <div class="card">
                 <div style="display: flex; justify-content: space-between; align-items: center;">
                     <h2>Reference Gallery</h2>
-                    <span style="font-size: 0.8em; color: #666;">Images stored in /var/lib/egm-detector</span>
+                    <span style="font-size: 0.8em; color: #666;">Source: /dev/shm/</span>
                 </div>
                 
                 <div class="tabs">
