--- a/egm_streamer/web/index.html
+++ b/egm_streamer/web/index.html
@@ -158,6 +158,17 @@
                             <tr><td colspan="3" style="text-align: center; color: #666;">Waiting for data...</td></tr>
                         </tbody>
                     </table>
+                    
+                    <!-- Legend -->
+                    <div style="font-size: 0.8em; color: #888; margin-top: 10px; border-top: 1px solid #444; padding-top: 8px;">
+                        <strong>About Metrics:</strong>
+                        <ul style="margin: 5px 0; padding-left: 20px;">
+                            <li><strong>Dist (Distance):</strong> Image difference score. 0 = Identical.</li>
+                            <li><span style="color: #4caf50">●</span> <strong>Green (< 15):</strong> High similarity. Good match.</li>
+                            <li><span style="color: #f1c40f">●</span> <strong>Yellow (15-25):</strong> Borderline. check thresholds.</li>
+                            <li><span style="color: #e74c3c">●</span> <strong>Red / N/A:</strong> No match found or distance too high.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             
