--- a/egm_streamer/web/index.html
+++ b/egm_streamer/web/index.html
@@ -122,9 +122,8 @@
                 </div>
                 
                 <div class="tabs">
-                    <button class="tab active" onclick="switchTab('NORMAL')">Normal</button>
-                    <button class="tab" onclick="switchTab('SELECT')">Select</button>
-                    <button class="tab" onclick="switchTab('PLAYING')">Playing</button>
+                    <!-- Tabs generated dynamically by JS -->
+                    <span style="color:#666; padding:10px;">Loading states...</span>
                 </div>
                 
                 <div id="ref-gallery" class="ref-gallery">
